--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>2.1.0.RELEASE</version>
@@ -34,6 +30,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.1.3.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -79,6 +76,11 @@
 
 
     </dependencies>
+    <modules>
+        <module>micro-service</module>
+        <module>zuul-gateway</module>
+        <module>springcloud-gateway</module>
+    </modules>
 
     <build>
         <plugins>
